# 8-bit-ai-composer

./: .gitignore  LICENSE  README.md  _mix_json.py  demo_v5_cli.py  main.py  prompt_太空电梯_v5.txt  pyproject.toml  requirements.txt  v5_prompt.md  使用方法.md
assets/: test_piano.mid
docs/: 8bit-advanced-techniques.md  ARCHITECTURE.md  CREATOR_WORKFLOW.md  DATA_AND_LICENSE_NOTES.md  GITHUB_RELEASE_CHECKLIST.md  PROJECT_STATUS.md  THERMOCLINE_CASE_STUDY.md  ai-midi-generation.md  beyond-8bit-music-generation.md  chiptune-community-tools.md  codex-prompt-sheet-music.md  codex-sheet-music-findings.md  competitor-landscape.md  game-audio-integration.md  llm-audio-integration.md  llm-music-composition-guide.md  music-ai-datasets-training.md  music-theory-for-ai.md
docs/llm-score-generation-research/: README.md  heroism-and-reference-scores.md  implementation-notes.md  music-knowledge-and-formats.md  vision-omr-pipeline.md
examples/: README.md
examples/community_midi_analysis_v1/: analysis_all.json  manifest.json  summary.csv  主旋律可唱性分析_v1.md  社区扒谱分析_v1.md
examples/highspeed_reference_midi_v1/: 参考MIDI来源清单.json  说明.md
examples/thermocline_chatb_direct_v1/: 01_温跃层_ChatB_direct_v1_full.mid  02_fit_gate_bass_drums_lead.mid  03_bass_drums_only.mid  MIDI转MP3链路说明.md  分组stem电平.csv  基础验证.json  说明.md
examples/thermocline_v1_reconsidered/: 分组stem电平.csv  基础验证.json  结构_score.json  说明.md
presets/: README.md
presets/macros/: alarm_minor_7.json  (+4 more)
scripts/: generate_thermocline_chatb_direct.py  generate_thermocline_no_lead_expanded.py  generate_thermocline_v1.py  render_preset_demo.py
(+80 files in other folders)
