[project]
name = "epsilon-bit-ai-composer"
version = "0.1.0"
description = "A local 8-bit/chip-style music composition lab with deterministic rendering, MIDI export, and AI-assisted experiment scripts."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "FengXue" }
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "soundfile>=0.12",
  "mido>=1.3",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["ebit*"]

[tool.ruff]
line-length = 120
target-version = "py311"
